# openvino_contrib

modules/rocm_plugin/: CMakeLists.txt  Dockerfile  README.md  build.sh  docker.sh
modules/rocm_plugin/docs/: bert_rocmlir_gemm_tuning.md  cuda_opset.md  performance_guide.md
modules/rocm_plugin/include/rocm/: properties.hpp
modules/rocm_plugin/patches/: 0001-rocmlir-fix-AlignTiling-build-error.patch  0002-tosatorock-features.patch  0003-driver-tuning-fallback.patch  0004-lds-bank-conflict-fix-f16-kpack.patch  0005-wmma-vgpr-occupancy-filter.patch  0006-wmma-occupancy-downgrade-and-b-prefetch.patch
modules/rocm_plugin/src/: CMakeLists.txt  cancellation_token.hpp  error.cpp  error.hpp  rocm_async_infer_request.cpp  rocm_async_infer_request.hpp  rocm_compiled_model.cpp  rocm_compiled_model.hpp  rocm_config.cpp  rocm_config.hpp  rocm_create_extensions.cpp  rocm_create_plugin.cpp  rocm_creation_context.hpp  rocm_eager_topology_runner.cpp  rocm_eager_topology_runner.hpp  rocm_graph_context.cpp  rocm_graph_context.hpp  rocm_graph_topology_runner.cpp  rocm_graph_topology_runner.hpp  rocm_iexecution_delegator.hpp  rocm_infer_request.cpp  rocm_infer_request.hpp  rocm_inference_request_context.hpp  rocm_itopology_runner.hpp  rocm_itt.hpp  rocm_jthread.hpp  rocm_latch.hpp  rocm_op_buffers_extractor.cpp  rocm_op_buffers_extractor.hpp  rocm_operation_base.cpp  rocm_operation_base.hpp  rocm_operation_registry.cpp  rocm_operation_registry.hpp  rocm_perf_counts.hpp  rocm_plugin.cpp  rocm_plugin.hpp  rocm_profiler.cpp  rocm_profiler.hpp  rocm_simple_execution_delegator.hpp  rocm_tensor_mapping_context.hpp  (+3 more)
modules/rocm_plugin/src/kernels/: abs.hip  abs.hpp  add.hip  add.hpp  bias_add.hip  bias_add.hpp  broadcast.hip  broadcast.hpp  clamp.hip  clamp.hpp  comparison.hip  comparison.hpp  concat.hip  concat.hpp  convert.hip  convert.hpp  convert_color.hpp  convert_color_i420.hip  convert_color_i420.hpp  convert_color_nv12.hip  convert_color_nv12.hpp  cos.hip  cos.hpp  cosh.hip  cosh.hpp  detection_output.hip  detection_output.hpp  divide.hip  divide.hpp  elu.hip  elu.hpp  exp.hip  exp.hpp  fake_quantize.hip  fake_quantize.hpp  floor.hip  floor.hpp  floor_mod.hip  floor_mod.hpp  fused_elementwise.hip  (+96 more)
modules/rocm_plugin/src/memory_manager/: rocm_device_mem_block.cpp  rocm_device_mem_block.hpp  rocm_immutable_memory_block_builder.cpp  rocm_immutable_memory_block_builder.hpp  rocm_memory_manager.cpp  rocm_memory_manager.hpp  rocm_memory_pool.cpp  rocm_memory_pool.hpp  rocm_workbuffers.hpp  tensor_types.hpp
modules/rocm_plugin/src/ops/: abs.cpp  abs.hpp  activation_forward_miopen_base.cpp  activation_forward_miopen_base.hpp  add.cpp  add.cpp.bak  add_miopen.cpp  add_miopen.hpp  add_rocm.hpp  avgpool.cpp  avgpool.hpp  bert_self_attention.cpp  bert_self_attention.hpp  broadcast.cpp  broadcast.hpp  clamp.cpp  clamp_miopen_cpp  clamp_miopen_hpp  clamp_rocm.cpp  clamp_rocm.hpp  clipped_relu_miopen.cpp  clipped_relu_miopen.hpp  comparison.cpp  comparison.hpp  concat.cpp  concat.hpp  convert.cpp  convert.hpp  convert_color_i420.cpp  convert_color_i420.hpp  convert_color_nv12.cpp  convert_color_nv12.hpp  converters.hpp  convolution.cpp  convolution_backprop_data_cpp_  convolution_backprop_data_hpp_  convolution_ck_wmma.cpp  convolution_ck_wmma.hpp  convolution_miopen.cpp  convolution_miopen.hpp  (+223 more)
modules/rocm_plugin/src/rocm/: blas.hpp  constant_factory.hpp  descriptor_utils.cpp  descriptor_utils.hpp  device_pointers.hpp  dnn.hpp  dnn_be.hpp  dnn_be_algo.hpp  dnn_be_attrs.hpp  dnn_be_desc.hpp  event.hpp  float16.hpp  graph.cpp  graph.hpp  hiprtc_compiler.hpp  math.hpp  node_params.hpp  rocm_fused_kernel.cpp  rocm_fused_kernel.hpp  rocm_type_traits.hpp  rocmlir_compiler.cpp  rocmlir_compiler.hpp  rocmlir_gemm.cpp  rocmlir_gemm.hpp  rocmlir_kernel_cache.cpp  rocmlir_kernel_cache.hpp  runtime.hpp  tensor.hpp  triton_flash_attn.cpp  triton_flash_attn.hpp  triton_flash_attn_aot.py  utils.hpp  wmma_attention_generic.cpp  wmma_attention_generic.hpp
modules/rocm_plugin/src/transformer/: bert_attention_matmul_fusion.cpp  bert_attention_matmul_fusion.hpp  bert_self_attention_fusion.cpp  bert_self_attention_fusion.hpp  bidirectional_lstm_sequence_composition.cpp  bidirectional_lstm_sequence_composition.hpp  concat_transformation.cpp  concat_transformation.hpp  convolution_asym_padding_transformation.cpp  convolution_asym_padding_transformation.hpp  dead_code_elimination.cpp  dead_code_elimination.hpp  detection_output_fix_input_types_transformation.cpp  detection_output_fix_input_types_transformation.hpp  dynamic_quantize_fusion_pass.cpp  dynamic_quantize_fusion_pass.hpp  elementwise_fusion_transformation.hpp  flash_attention_triton_fusion.cpp  flash_attention_triton_fusion.hpp  force_f16_matmul_pass.cpp  force_f16_matmul_pass.hpp  fuse_conv_biasadd_activation.cpp  fuse_conv_biasadd_activation.hpp  fuse_matmul_add.cpp  fuse_matmul_add.hpp  fused_fc_gelu_pass.cpp  fused_fc_gelu_pass.hpp  fused_layernorm_pass.cpp  fused_layernorm_pass.hpp  fused_masked_softmax_pass.cpp  fused_masked_softmax_pass.hpp  fused_mvn_epilogue_fusion.cpp  fused_mvn_epilogue_fusion.hpp  fused_qkv_pass.cpp  fused_qkv_pass.hpp  fused_rtd_fusion.cpp  fused_rtd_fusion.hpp  l2_normalize_fusion.cpp  l2_normalize_fusion.hpp  layer_norm_fusion.cpp  (+30 more)
modules/rocm_plugin/src/utils/: perf_timing.hpp
modules/rocm_plugin/tests/functional/: CMakeLists.txt  core_config.cpp  skip_tests_config.cpp
modules/rocm_plugin/tests/include/: rocm_test_constants.hpp
modules/rocm_plugin/tests/unit/: CMakeLists.txt  cancellation_token.cpp  compile_model.cpp  concat.cpp  convert_benchmark.cpp  limits.cpp  logical_not_benchmark.cpp  memory_pool.cpp  op_buffers_extractor_test.cpp  operation_registry.cpp  parameter.cpp  plugin.cpp  pooling_tests.cpp  relu.cpp  result.cpp  rocm_graph_compatibility.cpp  select_benchmark.cpp  (+7 more)
modules/rocm_plugin/tools/: mx_compile_layernorm.py  rocm_autobatch.py  rocm_benchmark.sh
modules/rocm_plugin/utils/: check.sh  cuda-sanitizer.sh  format.sh  lsan-suppressions.txt  pre-push  pre-push-impl.sh
modules/rocm_plugin/wheel/: setup.py
(+144 files in other folders)
